<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<parent>
		<artifactId>root</artifactId>
		<groupId>com.soffid.iam.console</groupId>
		<version>3.3.76-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<artifactId>iam-core</artifactId>
	<packaging>ejb</packaging>
	<name>Soffid Core Business Tier</name>

	<build>
		<resources>
			<resource>
				<directory>target/resources</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>target/src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/messages*.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>target/test-resources</directory>
				<targetPath>${project.build.directory}/test-classes</targetPath>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20</version>
				<configuration>
					<argLine>-Djava.security.manager -Djava.security.policy=${project.basedir}/src/test/resources/security.policy</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-ejb-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
						</manifest>
					</archive>
					<generateClient>true</generateClient>
					<clientIncludes>
						<clientInclude>
							es/caib/seycon/ng/servei/ejb/*.class
						</clientInclude>
						<clientInclude>
							es/caib/seycon/ng/servei/workflow/ejb/*.class
						</clientInclude>
						<clientInclude>
							es/caib/seycon/ng/exception/*.class
						</clientInclude>
					</clientIncludes>
					<ejbVersion>3.0</ejbVersion>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<classesDirectory>target/test-classes</classesDirectory>
					<finalName>${project.artifactId}-test-${project.version}.jar</finalName>
					<classifier>test-jar</classifier>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>unpack</goal>
						</goals>
						<phase>generate-sources</phase>
					</execution>
				</executions>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>${project.groupId}</groupId>
							<artifactId>iam-meta</artifactId>
							<version>${project.version}</version>
							<classifier>core</classifier>
							<type>zip</type>
							<overWrite>true</overWrite>
							<outputDirectory>${project.build.directory}/src</outputDirectory>
						</artifactItem>
						<artifactItem>
							<groupId>${project.groupId}</groupId>
							<artifactId>iam-meta</artifactId>
							<version>${project.version}</version>
							<classifier>core-resource</classifier>
							<type>zip</type>
							<overWrite>true</overWrite>
							<outputDirectory>${project.build.directory}/resources</outputDirectory>
						</artifactItem>
						<artifactItem>
							<groupId>${project.groupId}</groupId>
							<artifactId>iam-meta</artifactId>
							<version>${project.version}</version>
							<classifier>core-src</classifier>
							<type>zip</type>
							<overWrite>false</overWrite>
							<outputDirectory>${project.build.directory}/src-template</outputDirectory>
						</artifactItem>
						<artifactItem>
							<groupId>${project.groupId}</groupId>
							<artifactId>iam-meta</artifactId>
							<version>${project.version}</version>
							<classifier>test</classifier>
							<type>zip</type>
							<overWrite>true</overWrite>
							<outputDirectory>${project.build.directory}/src-test</outputDirectory>
						</artifactItem>
						<artifactItem>
							<groupId>${project.groupId}</groupId>
							<artifactId>iam-meta</artifactId>
							<version>${project.version}</version>
							<classifier>test-resource</classifier>
							<type>zip</type>
							<overWrite>true</overWrite>
							<outputDirectory>${project.build.directory}/test-resources</outputDirectory>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>

		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-dependency-plugin
										</artifactId>
										<versionRange>
											[2.0,)
										</versionRange>
										<goals>
											<goal>unpack</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.andromda.maven.plugins
										</groupId>
										<artifactId>
											andromda-multi-source-plugin
										</artifactId>
										<versionRange>
											[3.2,)
										</versionRange>
										<goals>
											<goal>add-source</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											com.soffid.tools
										</groupId>
										<artifactId>
											mda-maven-plugin
										</artifactId>
										<versionRange>
											[1.0-beta-1,)
										</versionRange>
										<goals>
											<goal>mda</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											build-helper-maven-plugin
										</artifactId>
										<versionRange>
											[1.7,)
										</versionRange>
										<goals>
											<goal>add-source</goal>
											<goal>add-test-source</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>iam-common</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>mail</artifactId>
			<version>1.4.7</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>es.caib.signatura.api</groupId>
			<artifactId>signaturaapi</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jta</artifactId>
					<groupId>javax.transaction</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>aopalliance</groupId>
			<artifactId>aopalliance</artifactId>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-collections</artifactId>
					<groupId>commons-collections</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jta</artifactId>
					<groupId>javax.transaction</groupId>
				</exclusion>
				<exclusion>
					<artifactId>
						commons-beanutils-bean-collections
					</artifactId>
					<groupId>commons-beanutils</groupId>
				</exclusion>
				<exclusion>
					<artifactId>dom4j</artifactId>
					<groupId>dom4j</groupId>
				</exclusion>
				<exclusion>
					<artifactId>log4j</artifactId>
					<groupId>log4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
		</dependency>
		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queries</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>commons-discovery</groupId>
			<artifactId>commons-discovery</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>es.caib.signatura.valcert</groupId>
			<artifactId>valcert-client-axis</artifactId>
			<version>1.6.6</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.dom4j</groupId>
			<artifactId>dom4j</artifactId>
			<version>2.1.3</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>6.1.11</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>org.jbpm.jbpm3</groupId>
			<artifactId>jbpm-jpdl</artifactId>
			<exclusions>
				<exclusion>
					<artifactId>jackrabbit-core</artifactId>
					<groupId>org.apache.jackrabbit</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bsh</artifactId>
					<groupId>bsh</groupId>
				</exclusion>
				<exclusion>
					<artifactId>junit</artifactId>
					<groupId>junit</groupId>
				</exclusion>
				<exclusion>
					<artifactId>ant</artifactId>
					<groupId>org.apache.ant</groupId>
				</exclusion>
				<exclusion>
					<artifactId>dom4j</artifactId>
					<groupId>dom4j</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.beanshell</groupId>
			<artifactId>bsh</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.9.1.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.0.7</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sf.jasperreports</groupId>
			<artifactId>jasperreports</artifactId>
			<version>6.18.1</version>
			<exclusions>
				<exclusion>
					<artifactId>spring-context</artifactId>
					<groupId>org.springframework</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-collections</artifactId>
					<groupId>commons-collections</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-beanutils</artifactId>
					<groupId>commons-beanutils</groupId>
				</exclusion>
				<exclusion>
					<artifactId>commons-logging</artifactId>
					<groupId>commons-logging</groupId>
				</exclusion>
				<exclusion>
					<artifactId>xml-apis</artifactId>
					<groupId>xml-apis</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jfreechart</artifactId>
					<groupId>jfree</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bcmail-jdk14</artifactId>
					<groupId>bouncycastle</groupId>
				</exclusion>
				<exclusion>
					<artifactId>bcprov-jdk14</artifactId>
					<groupId>bouncycastle</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jackson-core</artifactId>
					<groupId>com.fasterxml.jackson.core</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jackson-databind</artifactId>
					<groupId>com.fasterxml.jackson.core</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jackson-annotations</artifactId>
					<groupId>com.fasterxml.jackson.core</groupId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcmail-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcprov-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bctsp-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcprov-jdk15on</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
 		<dependency>
			<groupId>it.sauronsoftware.cron4j</groupId>
			<artifactId>cron4j</artifactId>
			<version>2.2.5</version>
		</dependency>
		<dependency>
			<groupId>com.twmacinta</groupId>
			<artifactId>fast-md5</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.finj</groupId>
			<artifactId>finj</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>jcifs</groupId>
			<artifactId>jcifs</artifactId>
			<version>1.2.14</version>
		</dependency>
		<dependency>
			<groupId>org.w3c</groupId>
			<artifactId>winie</artifactId>
			<version>1.0.10</version>
		</dependency>
		<dependency>
			<groupId>org.w3c</groupId>
			<artifactId>client</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.soffid.iam.console</groupId>
			<artifactId>scim-query</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.soffid.iam.console</groupId>
			<artifactId>iam-tomee</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomee</groupId>
			<artifactId>javaee-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.tomee</groupId>
			<artifactId>tomee-catalina</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.tomee</groupId>
			<artifactId>openejb-core</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.hsqldb</groupId>
					<artifactId>hsqldb</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
		</dependency>
		<dependency>
		    <groupId>jaxen</groupId>
		    <artifactId>jaxen</artifactId>
		    <version>1.1.6</version>
		</dependency>
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-core</artifactId>
		    <version>3.3.0</version>
		</dependency>
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-saml-api</artifactId>
		    <version>3.3.0</version>
		    <exclusions>
		    	<exclusion>
		    		<groupId>org.bouncycastle</groupId>
		    		<artifactId>bcprov-jdk15on</artifactId>
		    	</exclusion>
		    </exclusions>
		</dependency>
		<dependency>
		    <groupId>org.opensaml</groupId>
		    <artifactId>opensaml-saml-impl</artifactId>
		    <version>3.3.0</version>
		</dependency>
		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.2.3</version>
		</dependency>
		<dependency>
			<groupId>xalan</groupId>
			<artifactId>xalan</artifactId>
			<version>2.7.1</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
    		<groupId>org.bouncycastle</groupId>
    		<artifactId>bcpkix-jdk18on</artifactId>
    		<version>1.72</version>
		</dependency>
		<dependency>
    		<groupId>org.bouncycastle</groupId>
    		<artifactId>bcprov-jdk18on</artifactId>
    		<version>1.72</version>
		</dependency>
		<dependency>
    		<groupId>org.apache.santuario</groupId>
    		<artifactId>xmlsec</artifactId>
    		<version>2.1.7</version>
		</dependency>
		<dependency>
			<groupId>com.soffid.iam.console</groupId>
			<artifactId>dbtools</artifactId>
			<version>1.17</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-jcs-core</artifactId>
		    <version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.cxf</groupId>
			<artifactId>cxf-rt-rs-client</artifactId>
			<version>3.1.10</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
		  <groupId>com.fasterxml.jackson.core</groupId>
		  <artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		    <artifactId>jaxb-api</artifactId>
		    <version>2.2.11</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>com.sun.xml.bind</groupId>
		    <artifactId>jaxb-core</artifactId>
		    <version>2.2.11</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
		    <groupId>com.sun.xml.bind</groupId>
		    <artifactId>jaxb-impl</artifactId>
		    <version>2.2.11</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
		  <groupId>com.sun.activation</groupId>
		  <artifactId>jakarta.activation</artifactId>
		  <version>1.2.1</version>
		  <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.soffid.iam.console</groupId>
			<artifactId>iam-juli</artifactId>
			<version>${project.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers-common</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>com.soffid.iam</groupId>
			<artifactId>nashorn-core</artifactId>
		</dependency>
	</dependencies>
</project>

